# icerunner

./: .gitignore  CMakeLists.txt  Makefile
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codeql-analysis.yml
src/: actor.cpp  actor.hpp  character.cpp  character.h  entity.cpp  entity.h  entity.hpp  frame.cpp  frame.h  frame.hpp  game.cpp  game.hpp  game_map.cpp  game_map.hpp  icerunner.cpp  map.cpp  map.hpp  screen.cpp  screen.h  screen.hpp  tile.cpp  tile.hpp
